public/stylesheet/index.css
@import url('https://fonts.googleapis.com/css?family=Bungee+Shade');

body {
  user-select: none;
  animation-name: Loaded;
  animation-duration: 200ms
}

.form-wrapper {
  max-width: 300px;
  margin: auto;
  padding: 30px;
  border-radius: 10px
}

.title {
  font-weight: bold
}

.titlef {
  font-family: 'Bungee Shade'
}

.hero {
  border-radius: 10px;

}

#title-hero {
  text-align: center;
  animation-name: load;
  animation-duration: 650ms;
  animation-delay: 20ms;

}

#index-hero {
  text-align: center;
  animation-name: Index;
  animation-duration: 650ms;
}

.form-wrapper {
  animation-name: Index;
  animation-duration: 650ms;
  animation-delay: 70ms
}

#awrapper {
  animation: Index;
  animation-duration: 600ms
}

.hero-body .title {
  font-family: 'Bungee Shade'
}

.box {
  box-shadow: none;
  transition: 300ms ease;
  text-align: center
}

.box:hover, .box:focus {
  background: rgba(0, 0, 0, 0.027);
  transform: scale(1.3);
}

.affinity-active {
  color: rgb(228, 27, 228);
}

.health-active {
  color: red
}

.happyness-active {
  color: rgb(132, 202, 28)
} 

.hunger-active {
  color: yellow
}


@media screen and (max-width: 768px) {
  .box:hover, .box:focus {
    background: rgba(0, 0, 0, 0.027);
    box-shadow: 0 2px 20px white;
    transform: scale(1);
  }
}

#name-box {
  animation-name: load;
  animation-duration: 500ms;
  animation-delay: 0s 
}

#health-box {
  animation-name: load;
  animation-duration: 500ms;
  animation-delay: 30ms
}

#happyness-box {
  animation-name: load;
  animation-duration: 500ms;
  animation-delay: 60ms
}

#hunger-box {
  animation-name: load;
  animation-duration: 500ms;
  animation-delay: 90ms
}

@keyframes Index {
  0% {
    opacity: 0.0;
    transform: translateY(20px)
  }
}

@keyframes load {
  0% {
    opacity: 0.0;
    transform: translateY(50%);
  }
}

